--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "preview": "vite preview",
     "deploy": "npm run build && firebase deploy",
     "setup": "node scripts/setup.js",
-    "check-case": "node scripts/check-case.cjs"
+    "check-case": "node scripts/check-case.cjs",
+    "upload-words": "node scripts/upload-words.cjs"
   },
   "dependencies": {
     "firebase": "^11.2.0",
